# WatchDog

./: .gitignore  README.md  pyproject.toml
.antigravity/: README.md  preamble.md  protocol.md  registry.md
.antigravity/agents/: auditor.md  contracts.md  critic.md  docs.md  orchestrator.md  quality.md  runtime.md  scaffold.md  taskyfier.md  verifier.md
.codex/agents/: olympus_architecture_critic.toml  olympus_contracts_builder.toml  olympus_docs_formalizer.toml  olympus_orchestrator.toml  olympus_quality_builder.toml  olympus_runtime_builder.toml  olympus_scaffolding_builder.toml  olympus_task_verifier.toml  olympus_taskyfier.toml
.github/workflows/: package-windows.yml  quality.yml
config/: default.json
doc/: ALWAYSTRACK_WATCHDOG_MASTER_SPEC.md
docs/: README.md
docs/adr/: ADR-001-governanca-documental-operacional.md  ADR-002-baseline-tecnica-windows.md  README.md  _template.md
docs/operations/: orchestrator-state.md  pipeline-audit-2026-04-29.md  privacy-and-security.md  taskyfier-memory.md  troubleshooting.md  windows-distribution.md
docs/pipeline/: README.md  bootstrap.md  documentation-budget.md  llm-engine-policy.md  protocol.md
docs/project/: README.md  _intake-template.md  intake.md
docs/releases/: 0.1.0-readiness.md
docs/research/: slack-ui-automation-spike.md
docs/runbooks/: README.md  _template.md
docs/specs/: README.md  _template.md
docs/tasks/: README.md  _template.md  (+33 more)
packaging/: entrypoint.py  installer.iss  watchdog.spec
scripts/: build_windows.ps1  inspect_slack_uia.py  run_watchdog_windows.ps1  smoke_installer_windows.ps1
(+123 files in other folders)
