[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alwaystrack-watchdog"
version = "0.1.0"
description = "Agente local que destaca menções diretas do Slack Desktop no Windows."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
  "pywinauto>=0.6.9; sys_platform == 'win32'",
  "winotify>=1.1.0; sys_platform == 'win32'",
  "pystray>=0.19.5; sys_platform == 'win32'",
  "Pillow>=10.4; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "coverage[toml]>=7.6",
  "pyinstaller>=6.11",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.8",
]

[project.scripts]
watchdog = "watchdog.application.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["watchdog*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "windows: requer Windows",
  "slack_real: requer Slack Desktop e casos controlados",
]

[tool.coverage.run]
branch = true
source = ["watchdog"]

[tool.coverage.report]
show_missing = true
fail_under = 80
precision = 2

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
